--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,1 +1,6 @@
-<p>navbar works!</p>
+
+<header class="navbar">
+  <button (click)="onToggleSidebar()">☰</button>
+  <span class="title">Restaurant Management</span>
+  <button (click)="logout()">Logout</button>
+</header>
