--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,12 +5,12 @@
       <form (ngSubmit)="login()" class="login-form">
         <mat-form-field appearance="fill" class="full-width">
           <mat-label>Email</mat-label>
-          <input matInput type="email" [(ngModel)]="credentials.email" name="email" required />
+          <input matInput type="email" [(ngModel)]="email" name="email" required />
         </mat-form-field>
 
         <mat-form-field appearance="fill" class="full-width">
           <mat-label>Password</mat-label>
-          <input matInput type="password" [(ngModel)]="credentials.password" name="password" required />
+          <input matInput type="password" [(ngModel)]="password" name="password" required />
         </mat-form-field>
 
         <button mat-raised-button color="primary" style="background-color: #1976d2; color: white;" type="submit" class="full-width">
