worked on staff and admin dashboard

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,5 @@
-
 <header class="navbar">
-  <button (click)="onToggleSidebar()">☰</button>
+  <button class="menu-btn" (click)="onToggleSidebar()">☰</button>
   <span class="title">Restaurant Management</span>
-  <button (click)="logout()">Logout</button>
+  <button class="logout-btn" (click)="logout()">Logout</button>
 </header>
