--- a/src/app/staff/staff-layout/staff-layout.component.html
+++ b/src/app/staff/staff-layout/staff-layout.component.html
@@ -1,8 +1,10 @@
 <app-navbar (toggleSidebar)="toggleSidebar()"></app-navbar>
 <div class="layout-container">
   <app-sidebar [isSidebarOpen]="isSidebarOpen"></app-sidebar>
-  <main class="main-content">
-    <router-outlet></router-outlet>
-  </main>
+  <div class="main-wrapper">
+    <main class="main-content">
+      <router-outlet></router-outlet>
+    </main>
+    <app-footer></app-footer>
+  </div>
 </div>
-<app-footer></app-footer>
