--- a/src/app/admin/admin-layout/admin-layout.component.html
+++ b/src/app/admin/admin-layout/admin-layout.component.html
@@ -1,1 +1,10 @@
-<p>admin-layout works!</p>
+<app-navbar (toggleSidebar)="toggleSidebar()"></app-navbar>
+<div class="layout-container">
+  <app-sidebar [isSidebarOpen]="isSidebarOpen"></app-sidebar>
+  <div class="main-wrapper">
+    <main class="main-content">
+      <router-outlet></router-outlet>
+    </main>
+    <app-footer></app-footer>
+  </div>
+</div>
