--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
-<p>Admin dashboard works!</p>
+<div class="dashboard-container">
+  <h2>Welcome, {{role}}</h2>
+  <p>Email: {{ email }}</p>
+  <!-- <p>Role: {{ role }}</p> -->
+  <!-- <button (click)="logout()" mat-raised-button color="warn">Logout</button> -->
+</div>
