--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,6 +1,12 @@
 .footer {
   background-color: #1976d2;
   color: white;
-  padding: 10px;
   text-align: center;
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 40px;
+  z-index: 1000;
 }
