--- a/src/app/staff/dashboard/dashboard.component.html
+++ b/src/app/staff/dashboard/dashboard.component.html
@@ -2,5 +2,5 @@
   <h2>Welcome, {{role}}</h2>
   <p>Email: {{ email }}</p>
   <!-- <p>Role: {{ role }}</p> -->
-  <button (click)="logout()" mat-raised-button color="warn">Logout</button>
+  <!-- <button (click)="logout()" mat-raised-button color="warn">Logout</button> -->
 </div>
